# Humanoid-AI

./: .gitignore  debug_api_scenario.py  mintty.exe.stackdump  test_agent.py  test_agent_endpoint.py  test_agent_service.py  test_agent_service_directly.py  test_agent_validation.py  test_agent_with_low_threshold.py  test_api.py  test_api_route_simulation.py  test_async_agent_service.py  test_backend_connection.py  test_blog_features.py  test_direct_retrieval.py  test_direct_search.py  test_embedding_generation.py  test_final_verification.py  test_gemini.py  test_gemini_connection.py  test_ingestion.py  test_llm_call.py  test_retrieval_service.py  test_retrieval_service_low_threshold.py  test_retrieval_with_real_data.py  test_specific_retrieval.py  test_validation_service.py
backend/: .env.example  .gitignore  README.md  ingestion_tracking.json  main.py  pyproject.toml  requirements.txt  start_server.py  test_api_endpoints.py  test_basic_ingestion.py  test_embeddings.py  test_end_to_end.py  test_ingestion_final.py  test_ingestion_full.py  test_ingestion_simple.py  test_ingestion_with_embeddings.py  test_qdrant_storage.py  test_rag_agent.py  test_retrieval.py  test_single_url.py
backend/docs/: api_endpoints.md  quickstart.md  setup.md  validation_results.md
backend/scripts/: generate_report.py  ingest.py  validate.py  validate_retrieval.py
backend/src/: logging_config.py
backend/tests/: end_to_end_validation_test.py  test_connection.py  test_consistency.py  test_crawler.py  test_embeddings.py  test_extractor.py  test_metrics.py  test_pipeline.py  test_processor.py  (+2 more)
(+199 files in other folders)
