[project]
name = "backend"
version = "0.1.0"
description = "Data Ingestion & Vector Storage service for RAG-enabled documentation system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cohere>=5.20.1",
    "fastapi>=0.128.0",
    "lxml>=6.0.2",
    "openai>=1.14.0",
    "openai-chatkit>=1.4.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
    "requests>=2.32.5",
]
